--- a/public/css/style.css
+++ b/public/css/style.css
@@ -121,7 +121,7 @@ a.btn:hover {
     transition: filter 0.2s ease-in-out;
 }
 .company-info{
-    background-color: #f8f9fa;
+    background-color: #ffffff;
     border-radius: 8px;
     padding: 20px;
     box-shadow: 0 2px 12px rgba(0,0,0,0.07);
@@ -172,4 +172,100 @@ a.btn:hover {
 .alert{
     font-size: 13px !important;
     padding: 10px;
+}
+.folder-row {
+    display: flex;
+    gap: 32px;
+    margin-bottom: 16px;
+}
+.folder-col {
+    flex: 1;
+    background: #f8f9fa;
+    border-radius: 8px;
+    padding: 12px 16px;
+    min-width: 200px;
+    box-shadow: 0 2px 6px #0001;
+    margin-top: 5px;
+}
+.folder-title {
+    font-weight: bold;
+    font-size: 14px;
+    margin-bottom: 6px;
+    display: flex;
+    align-items: center;
+    background: #fff;
+    border-radius: 5px;
+    padding: 8px 10px;
+    color: #b97a00;
+    box-shadow: 0 1px 3px #0001;
+    margin-top: 10px;
+    position: relative;
+}
+button.add-ngay-nop{
+    position: absolute;
+    right: 0;
+    color: #ccc;
+    font-size: 10px;
+}
+.file-title {
+    display: flex;
+    align-items: center;
+    background: #eaf6ff;
+    border-radius: 5px;
+    padding: 3px 10px;
+    color: #1766a0;
+    margin-bottom: 3px;
+    font-size: 1em;
+}
+.folder-icon {
+    color: #f7b731;
+    margin-right: 8px;
+    font-size: 1.2em;
+}
+.file-icon {
+    color: #3498db;
+    margin-right: 8px;
+    font-size: 1.1em;
+}
+ul.file-list, ul.folder-list {
+    list-style: none;
+    padding-left: 18px;
+    margin-bottom: 0;
+}
+ul.file-list li, ul.folder-list li {
+    margin-bottom: 4px;
+}
+a.file-link {
+    color: #1766a0;
+    text-decoration: none;
+    font-size: 12px;
+}
+a.file-link:hover {
+    text-decoration: underline;
+    color: #0d3c5e;
+}
+.form-upload-xml{
+    padding: 20px;
+    border-radius: 10px;
+    background-color: #ffffff;
+    box-shadow: 0 2px 12px rgba(0,0,0,0.07);
+    margin: 20px 0;
+}
+.form-upload-xml input[type="file"]{
+    border: 1px solid #000;
+    border-radius: 5px;
+    padding: 5px;
+    margin-right: 10px;
+}
+.form-upload-xml button{
+    border-radius: 5px;
+}
+.ngay-nop{
+    font-size: 12px;
+    color: #666;
+    margin-left: 10px;
+    font-weight: 400;
+}
+.content-page{
+    padding-bottom: 50px;
 }
